# ProSafe

./: .gitignore  .gitmodules  CMakeLists.txt
include/: logger.h  main.h
src/: logger.c  main.c
